kind-cluster/{{ cookiecutter.__project_name }}/{{ cookiecutter.namespace }}/overlays/traefik/dashboard-stripprefix-middleware.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: dashboard-stripprefix
  namespace: traefik # Or the namespace where your dashboard is
spec:
  stripPrefix:
    prefixes:
      - /dashboard
